--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "dotenv": "^16.4.5"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0 <25.0.0"
   },
   "packageManager": "npm@10.0.0"
 }
