--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^7.0.10",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
@@ -48,7 +47,7 @@
     "dotenv": "^16.4.5"
   },
   "engines": {
-    "node": ">=18.0.0 <25.0.0"
+    "node": "18.x"
   },
   "packageManager": "npm@10.0.0"
 }
