--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0",
     "ts-node": "^10.9.2",
+    "glob": "^10.0.0",
     "dotenv": "^16.4.5"
   },
   "engines": {
