--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.16",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.35",
