--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.0",
     "tailwind-merge": "^2.2.0",
+    "twilio": "^5.3.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
